[workspace]
resolver = "2"
members = [
    "packages/core-rust",
    "packages/server-rust",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/topgunbuild/topgun"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

[workspace.lints.rust]
unsafe_code = "forbid"

[profile.release-with-debug]
inherits = "release"
debug = true
