[workspace]
resolver = "2"
members = [
    "packages/core-rust",
    "packages/server-rust",
]

[workspace.package]
version = "2.0.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/topgunbuild/topgun"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
# Adopted per project lint-strictness policy; rationale in CONTRIBUTING.md
# § Lint strictness policy (clippy). All three guard against unfinished /
# debug-leftover code reaching production paths; zero existing fires in
# production code at adoption time.
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
madsim = "0.2.34"

[profile.release-with-debug]
inherits = "release"
debug = true

# Faster builds for simulation runs: opt-level=1 reduces compile time vs release
# while still being fast enough for large test suites. debug-assertions=true
# catches invariant violations that release mode would silently skip.
[profile.ci-sim]
inherits = "dev"
opt-level = 1
debug-assertions = true
